--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
 </head>
-<body data-backend-url="">
+<body data-backend-url="https://boulderingo.onrender.com">
   <div class="container" id="container">
   
     <h1>Boulderingo</h1>
