--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
             <p><strong>Room Code:</strong> <span id="roomCodeDisplay"></span></p>
             <p id="roomPlayers"></p>
           </div>
+          
+          <div id="lobby" style="display: none;">
+            <h3>Lobby</h3>
+            <p>Waiting for players to join...</p>
+            <ul id="lobbyPlayers" style="list-style: none; padding: 0; text-align: left; background: white; border-radius: 8px; padding: 12px; margin: 10px 0;"></ul>
+            <button id="startGameBtn" style="display: none; margin-top: 15px; padding: 12px 24px; font-size: 16px; font-weight: bold;">Start Game</button>
+            <p id="waitingForHost" style="display: none; margin-top: 15px; font-style: italic;">Waiting for host to start the game...</p>
+          </div>
         </div>
       </div>
     </div>
