--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
 <body data-backend-url="https://boulderingo.onrender.com">
   <div class="container" id="container">
   
-    <!-- Header with logo space and title -->
-    <div class="header">
+    <div class="header"> 
       <div class="logo-placeholder">
-        <!-- Logo will go here - add <img src="logo.png" alt="Logo" /> when ready -->
+        <!--  <img src="logo.png" alt="Logo" />  -->
       </div>
       <h1>Boulderingo</h1>
     </div>
     
-    <!-- Challenge instruction -->
     <p class="challenge-instruction">Only 1 challenge may be attempted at a time</p>
 	
     <div class="input-section">
       <label for="nameInput">Enter your name:</label>
       <input type="text" id="nameInput" placeholder="Your name..." />
       
-      <!-- Game settings row -->
       <div class="settings-row">
         <div class="setting-group">
           <label for="modeSelect">Difficulty:</label>
@@ -123,7 +120,6 @@
       <ol id="leaderboardList"></ol>
     </div>
 
-	<!-- Challenge tooltip -->
 	<div id="challengeTooltip" class="challenge-tooltip">
 		<div class="tooltip-content">
 			<h4 id="tooltipTitle"></h4>
